--- a/about-me.html
+++ b/about-me.html
@@ -33,7 +33,7 @@
                                 <div class="main-nav-small"><a href="about-me.html"><b>About Me</b></a></div>
                             </li>
                             <li>
-                                <div class="main-nav-small"><a href="contact.html">Contact</a></div>
+                                <div class="main-nav-small"><a href="contact-page.php">Contact</a></div>
                             </li>
                         </ul>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="main-nav">
                         <ul>
                             <li><a href="about-me.html"><b>About Me</b></a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-page.php">Contact</a></li>
                         </ul>
                     </div>
                 </section>
@@ -95,8 +95,8 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="about-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>Who I am</b></h3>
+                            <p>I'm Drew and I've been playing games since I could hold a controller. My first console was the orginal Playstation. I played console games all the way up until 2016. Then I made the switch to PC. Ever since then I've been obsessed with all the different peripherals you can get. My favorite thing about pc gaming is the amount of customizations. You can make something truely  custamize your space to be exactly how you want it. </p>
                         </div>
                         <div id="my-peripherals">
                         <H3><b>My Peripherals</b></H3>
