--- a/astro-a40-review.html
+++ b/astro-a40-review.html
@@ -33,7 +33,7 @@
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
-                                <div class="main-nav-small"><a href="contact.html">Contact</a></div>
+                                <div class="main-nav-small"><a href="contact-page.php">Contact</a></div>
                             </li>
                         </ul>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="main-nav">
                         <ul>
                             <li><a href="about-me.html">About Me</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-page.php">Contact</a></li>
                         </ul>
                     </div>
                 </section>
@@ -75,18 +75,18 @@
                     </div>
                     <section class="col-md-9">
                         <div class="page1-header">
-                            <h1>Audio-Technica M50x</h1>
+                            <h1>Astro A40 Gen2</h1>
                         </div>
                     </section>
                 </div>
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/M50x-1.jpg" width="1500" height="792" alt="computer-monitors">
+                        <img class="image-header-left img-fluid" src="images/a40-2.jpg" width="1500" height="792" alt="astro-a40-headset">
                     </section>
                     <div class="green-text-bckg">
                         <section class="col-md-6">
                             <h2>Quick take:</h2>
-                            <p>Great headphones! If you have the money and a external microphone. Would highly recommend the Audio Technica M50x's. </p>
+                            <p>This headset brings great memories for me. A lot of my competitive days where spent wearing this headset. Overall a great headset. </p>
                         </section>
                     </div>
                 </div>
@@ -95,42 +95,37 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>The A40's by Astro</b></h3>
+                            <p>When I was getting into competitive gaming back in the old Xbox 360. All the pros have Astro headsets. So, I always wanted a pair. The only issue was the price. $250 for a gaming headset. When I got my first job and paycheck I immediately went to best buy and bot my pair of Astro A40’s gen 2. The Astro A40 feature a mix amp that you can control the overall volume and game/chat mix volume. The mix amp allows it to simulate surround sound and allows you to change the audio profile. It was a purchase I never felt buyer’s remorse on. I was in love with. I finally had the headset of the pros. I’m set. So, I thought…</p>
                         </div>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Cons</b></h3>
-                            <p style="clear: both">The M50x’s does have some cons to it, but most of them are personal preference. To start, it’s a closed back design. Closed back, if you don’t know, just means it’s ear cuffs are designed to cancel out noise. Which is not a bad thing by no means. The problem I have with closed back headphones, is that they in general don’t let your ears breath. So, this means over long sessions of wearing them, your ears may begin to sweat and get hot. I’ve only had this issue sometimes when going for long sessions. But to relieve it, I just slide the ear part off my ear about halfway, so I can still hear the audio and let my ear breath for a bit.</p>
+                            <p style="clear: both">For the longest time, I had no cons for this headset. Nothing at all. This all changed once I tried a different headset. The simulated surround sounds are very over hyped. It compresses the audio so much that you miss out on a lot of sound ques that are very faint. With a standard stereo headset, I was able to hear things in more detail I could with the simulated surround sound. Another con was the microphone. Over the years it would just end of dying. Where it would just crackle and sound muffled, or just stop working all together.  </p>
                         </div>
                     </section>
                     <section class="col-md-5">
                         <div class="review-text">
-                            <p>Another con one may have is that, if you intend on using the M50x’s to play games. It doesn’t have a built-in microphone. So, you’ll have to go out and buy one. This wasn’t an issue for me since most gaming headsets have really bad quality microphones. For my microphone I went with a ModMic wireless, which can be attached to any pair of headphones on the market via a 3m adhesive.</p>
+                            <p>It was so bad that Astro started to sell the microphone by itself so people could replace it. Lastly the headband. I had mine break off at the tab that holds it on a couple of times, just from wearing. Astro also sells this piece that you can go buy and replace it. I just used hot glue; it works for the most part.</p>
                             <div class="review-text-seperate">
                             <h3><b>Pros</b></h3>
-                            <p>The pros for the M50x goes on for days. First off, I’m going to start with what it comes with. It comes with three cables. One is a small short 3.5mm jack for your phones and small devices. The second is just like the first but longer. Then finally, is a coiled cable that is very long. It also has an amp jack on it that can be attached or removed depending if you have a amp or not. One of the unique things about these headphones is that they actually fold up and come with a caring case, this makes transport very easy. </p>
-                            <p>Another pro is that, they use quality leather and cushion in the earpieces and headband. My head never really gets tired of wearing these things, besides when my ears get warm. The biggest pro that these have going for it is the sound quality.
-                            </p>
+                            <p>So besides the of the items on the headset just breaking. It was a great headset. My favorite thing about the headset and the main reason by I bought it. Was the fact it looks cool. It is a very nice design. Everything matches everything. I loved it. The mix amp was nice besides the surround sound.  </p>
+                            <p>The option to mix the volume of voice and game sound was amazing. It allowed for you to turn down people if you need to hear something important. It also offered a aux cable that could be plugged into anything so you could hear all that audio too.
+                            </p><br>
+                                <h3><b>Conclusion</b></h3>
                                 </div>
                         </div>
                     </section>
                     <section class="col-md-6">
-                        <img class="review-image img-fluid" src="images/M50x-2.jpg" alt="M50x-headphones-box">
+                        <img class="review-image img-fluid" src="images/a40-1.jpg" alt="M50x-headphones-box">
                     </section>
                     <section class="col-md-12">
-                    <p> I have never had a pair of headphones sound so good. Lows are really good with these. So, footsteps in games that those are important are very easily heard. These have bass, but not too much where it becomes overpowering. I’ve only had mine for about four months now, and from other reviews, I’ve only heard they sound even better the longer you use them! </p>
-                    </section>
-                    <section class="col-md-12">
-                        <div class="review-text">
-                            <h3><b>Conclusion</b></h3>
-                            <p>Overall if you are looking for a pair of headphones, or a headset. I would go with the Audio Technica M50x’s and a standalone microphone 100 times over again. At $150 its really hard to beat. When I was buying mine it was between the M50x and the Sennheiser HD 6XX. The 6XX come in at $220. The only main differences between the two is that the 6XX are more open back design, which I prefer, and the 6XX draw more power.</p>
-                            <div class="review-text-bottem">
-                            <p>I really liked the open back design but didn’t like that it draws more power than the M50x. Another thing that gave the M50x an upper hand was that, they are some much more versatile. The 6XX would just be use able comfortably at home at your main rig. The M50x’s on the other hand are useable anywhere you are. Whether at home, school, or on a bus ride in the city. The M50x will be there. </p>
-                            </div>
+                        <div class="review-text-bottem">
+                    <p> The Astro A40’s even with all the cons, are still my second favorite headset of all time. That more than likely based on the memories I had while wearing that headset. If I hadn’t found the M50x’s by audio techinca I could see myself buying Astro again. The $250 is a big price to pay for audio. I would say if you like the way it looks. Go for it. It makes you feel good when wearing it.  </p>
                         </div>
                     </section>
+                   
                 </div>
             </div>
         </div>
