--- a/headphones.html
+++ b/headphones.html
@@ -33,7 +33,7 @@
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
-                                <div class="main-nav-small"><a href="contact.html">Contact</a></div>
+                                <div class="main-nav-small"><a href="contact-page.php">Contact</a></div>
                             </li>
                         </ul>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="main-nav">
                         <ul>
                             <li><a href="about-me.html">About Me</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-page.php">Contact</a></li>
                         </ul>
                     </div>
                 </section>
@@ -89,7 +89,7 @@
                             <img class="card-img-top" src="images/Sennheiser-PC-37x.jpg" alt="headphones">
                             <div class="card-body">
                                 <h4 class="card-title">Sennheiser PC-37x</h4>
-                                <p class="card-text">The Sennheiser PC-37x's are one of the cheaper options for gaming from Sennheiser. But it's safe to say that these pair of headphones, have some serious bang for the buck!</p>
+                                <p class="card-text">Sennheiser is one of the most well know audio companies in the world. The German based company is known for its amazing audiophile headphones...</p>
                                 <a href="sennheiser-pc-37x-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
@@ -100,10 +100,10 @@
                 <div class="row">
                     <section class="col-md-6">
                         <div class="card">
-                            <img class="card-img-top" src="images/M50x-1.jpg" alt="headphones">
+                            <img class="card-img-top" src="images/a40-2.jpg" alt="astro-headphones">
                             <div class="card-body">
                                 <h4 class="card-title">Astro A40</h4>
-                                <p class="card-text">The M50x by audio-technica was released in January of 2014. They are priced at $150, which it’s safe to say it’s an absolute steal. These headphones are by far the best I’ve...</p>
+                                <p class="card-text">When I was getting into competitive gaming back in the old Xbox 360. All the pros have Astro headsets. So, I always wanted a pair. The only issue was the price. $250 for a gaming headset... </p>
                                 <a href="astro-a40-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
