--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
-                                <div class="main-nav-small"><a href="contact.html">Contact</a></div>
+                                <div class="main-nav-small"><a href="contact-page.php">Contact</a></div>
                             </li>
                         </ul>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="main-nav">
                         <ul>
                             <li><a href="about-me.html">About Me</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-page.php">Contact</a></li>
                         </ul>
                     </div>
                 </section>
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-right img-fluid" src="images/960-GPU.jpg" width="4032" height="1960" alt="graphic-card">
+                        <img class="image-header-right img-fluid" src="images/mouse-on-pad.jpg" width="4032" height="1960" alt="mouse-on-pad">
                     </section>
                     <div class="green-text-bckg-page1-2">
                         <section class="col-md-6">
@@ -122,7 +122,7 @@
             <div class="container">
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/mouse-on-pad.jpg" width="4032" height="1960" alt="mouse-on-mousepad">
+                        <img class="image-header-left img-fluid" src="images/960-GPU.jpg" width="4032" height="1960" alt="graphics-card">
                     </section>
                     <div class="green-text-bckg-page1-3">
                         <section class="col-md-6">
