--- a/keyboards.html
+++ b/keyboards.html
@@ -34,7 +34,7 @@
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
-                                <div class="main-nav-small"><a href="contact.html">Contact</a></div>
+                                <div class="main-nav-small"><a href="contact-page.php">Contact</a></div>
                             </li>
                         </ul>
                     </div>
@@ -55,7 +55,7 @@
                     <div class="main-nav">
                         <ul>
                             <li><a href="about-me.html">About Me</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-page.php">Contact</a></li>
                         </ul>
                     </div>
                 </section>
@@ -77,20 +77,20 @@
                     </section>
                     <section class="col-md-6">
                         <div class="card">
-                            <img class="card-img-top" src="images/M50x-1.jpg" alt="headphones">
+                            <img class="card-img-top" src="images/fnatic-streak-1.jpg" alt="keyboard">
                             <div class="card-body">
                                 <h4 class="card-title">Fnatic Streak Mini</h4>
-                                <p class="card-text">The M50x by audio-technica was released in January of 2014. They are priced at $150, which it’s safe to say it’s an absolute steal. These headphones are by far the best I’ve...</p>
+                                <p class="card-text">The esports organization Fnatic, has had its own peripherals for a while now. Recently they have been revolutionizing their lineup. They started with the their keyboards... </p>
                                 <a href="fnatic-streak-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
                     </section>
                     <section class="col-md-6">
                         <div class="card">
-                            <img class="card-img-top" src="images/Sennheiser-PC-37x.jpg" alt="headphones">
+                            <img class="card-img-top" src="images/razer-huntsman-2.jpg" alt="keyboard">
                             <div class="card-body">
                                 <h4 class="card-title">Razer Huntsman TE</h4>
-                                <p class="card-text">The Sennheiser PC-37x's are one of the cheaper options for gaming from Sennheiser. But it's safe to say that these pair of headphones, have some serious bang for the buck!</p>
+                                <p class="card-text">Before this keyboard, I honestly never thought of owning any razer products that wasn’t a mousepad because of the stigma they had from their past with quality control issues.. </p>
                                 <a href="razer-huntsman-te-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
@@ -101,10 +101,10 @@
                 <div class="row">
                     <section class="col-md-6">
                         <div class="card">
-                            <img class="card-img-top" src="images/M50x-1.jpg" alt="headphones">
+                            <img class="card-img-top" src="images/corsair-k70-1.jpg" alt="corsair-keyboard">
                             <div class="card-body">
                                 <h4 class="card-title">Corsair K70 Mk.2</h4>
-                                <p class="card-text">The M50x by audio-technica was released in January of 2014. They are priced at $150, which it’s safe to say it’s an absolute steal. These headphones are by far the best I’ve...</p>
+                                <p class="card-text">The Corsair K70 Mk.2 was my favorite keyboard for the longest time. The cool design mixed with the Cherry mx silver switches. Made it a very delightful typing experience... </p>
                                 <a href="corsair-k70-review.html" class="btn btn-primary">See Review</a>
                             </div>
                         </div>
