--- a/sennheiser-pc-37x-review.html
+++ b/sennheiser-pc-37x-review.html
@@ -33,7 +33,7 @@
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
-                                <div class="main-nav-small"><a href="contact.html">Contact</a></div>
+                                <div class="main-nav-small"><a href="contact-page.php">Contact</a></div>
                             </li>
                         </ul>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="main-nav">
                         <ul>
                             <li><a href="about-me.html">About Me</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-page.php">Contact</a></li>
                         </ul>
                     </div>
                 </section>
@@ -75,18 +75,18 @@
                     </div>
                     <section class="col-md-9">
                         <div class="page1-header">
-                            <h1>Audio-Technica M50x</h1>
+                            <h1>Sennheiser PC-37x</h1>
                         </div>
                     </section>
                 </div>
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/M50x-1.jpg" width="1500" height="792" alt="computer-monitors">
+                        <img class="image-header-left img-fluid" src="images/Sennheiser-PC-37x.jpg" width="1500" height="792" alt="computer-monitors">
                     </section>
                     <div class="green-text-bckg">
                         <section class="col-md-6">
                             <h2>Quick take:</h2>
-                            <p>Great headphones! If you have the money and a external microphone. Would highly recommend the Audio Technica M50x's. </p>
+                            <p>With the iconic sound of Sennheiser. These gaming headphones are no joke. They are one of my favorites and that's for good reason.  </p>
                         </section>
                     </div>
                 </div>
@@ -95,39 +95,36 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>The PC-37x by Sennheiser</b></h3>
+                            <p>Sennheiser is one of the most well know audio companies in the world. The German based company is known for its amazing audiophile headphones. So, it makes sense that when they step their feet into the gaming market. They have great success. The Massdrop Sennheiser PC-37x is my favorite of the gaming line Sennheiser has to offer. They feature one of the best microphones stock on a gaming headset I have ever had. They are very light but pack a punch in the audio department. </p>
                         </div>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Cons</b></h3>
-                            <p style="clear: both">The M50x’s does have some cons to it, but most of them are personal preference. To start, it’s a closed back design. Closed back, if you don’t know, just means it’s ear cuffs are designed to cancel out noise. Which is not a bad thing by no means. The problem I have with closed back headphones, is that they in general don’t let your ears breath. So, this means over long sessions of wearing them, your ears may begin to sweat and get hot. I’ve only had this issue sometimes when going for long sessions. But to relieve it, I just slide the ear part off my ear about halfway, so I can still hear the audio and let my ear breath for a bit.</p>
+                            <p style="clear: both">This headset is very. It’s honestly hard to find a con for this guy. The only one I can think of is the material the earcups are made of. It a felt material that holds hair and dust very well. Making cleaning them and must if you want to keep a nice clean looking going. Luckily these are removable but can be a hassle to put back on. When you are trying to click them in. There is no click, so it may feel like they’re in but then they fall out. </p>
                         </div>
                     </section>
                     <section class="col-md-5">
                         <div class="review-text">
-                            <p>Another con one may have is that, if you intend on using the M50x’s to play games. It doesn’t have a built-in microphone. So, you’ll have to go out and buy one. This wasn’t an issue for me since most gaming headsets have really bad quality microphones. For my microphone I went with a ModMic wireless, which can be attached to any pair of headphones on the market via a 3m adhesive.</p>
-                            <div class="review-text-seperate">
                             <h3><b>Pros</b></h3>
-                            <p>The pros for the M50x goes on for days. First off, I’m going to start with what it comes with. It comes with three cables. One is a small short 3.5mm jack for your phones and small devices. The second is just like the first but longer. Then finally, is a coiled cable that is very long. It also has an amp jack on it that can be attached or removed depending if you have a amp or not. One of the unique things about these headphones is that they actually fold up and come with a caring case, this makes transport very easy. </p>
-                            <p>Another pro is that, they use quality leather and cushion in the earpieces and headband. My head never really gets tired of wearing these things, besides when my ears get warm. The biggest pro that these have going for it is the sound quality.
+                            <p>To start the audio quality is very good. No surprise. It is a good balance between the lows and highs. I wouldn’t really listen to music with them, but for gaming they are extremely good. Directional sound is very good in these.   </p>
+                            <div class="review-text-seperate">
+                            <p>Another thing I like was the weight. With most the headset being plastic with a metal band in the middle. It makes it feel like nothing on the head after wearing it for hours.</p>
+                            <p>Along with that band it has a great clamping pressure on your head. So, with the weight down and the fact that they are an open back headset. Means it lets your ears breath and cool. The last thing that I want to make a point on is the microphone. </p>
+                            <p>It has a rich deep sound, that compared to other gaming headsets in this price range. Is very uncompressed and sounds a lot more nature than lets say Hyperx headsets or Logitech. My favorite feature of the microphone is the mute function. To mute the mic all you have to do is tilt the mic up, until it clicks, and your muted.
                             </p>
                                 </div>
                         </div>
                     </section>
                     <section class="col-md-6">
-                        <img class="review-image img-fluid" src="images/M50x-2.jpg" alt="M50x-headphones-box">
+                        <img class="review-image img-fluid" src="images/Sennheiser-PC-37x-2.jpg" alt="M50x-headphones-box">
                     </section>
-                    <section class="col-md-12">
-                    <p> I have never had a pair of headphones sound so good. Lows are really good with these. So, footsteps in games that those are important are very easily heard. These have bass, but not too much where it becomes overpowering. I’ve only had mine for about four months now, and from other reviews, I’ve only heard they sound even better the longer you use them! </p>
-                    </section>
-                    <section class="col-md-12">
+                                       <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Conclusion</b></h3>
-                            <p>Overall if you are looking for a pair of headphones, or a headset. I would go with the Audio Technica M50x’s and a standalone microphone 100 times over again. At $150 its really hard to beat. When I was buying mine it was between the M50x and the Sennheiser HD 6XX. The 6XX come in at $220. The only main differences between the two is that the 6XX are more open back design, which I prefer, and the 6XX draw more power.</p>
                             <div class="review-text-bottem">
-                            <p>I really liked the open back design but didn’t like that it draws more power than the M50x. Another thing that gave the M50x an upper hand was that, they are some much more versatile. The 6XX would just be use able comfortably at home at your main rig. The M50x’s on the other hand are useable anywhere you are. Whether at home, school, or on a bus ride in the city. The M50x will be there. </p>
+                            <p>This Sennheiser headset is the real deal. Coming in at $100 on Drop.com. You will not be disappointed. This destroys every headset at $100 or less. No question about. Highly recommend.</p>
                             </div>
                         </div>
                     </section>
