--- a/corsair-k70-review.html
+++ b/corsair-k70-review.html
@@ -33,7 +33,7 @@
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
-                                <div class="main-nav-small"><a href="contact.html">Contact</a></div>
+                                <div class="main-nav-small"><a href="contact-page.php">Contact</a></div>
                             </li>
                         </ul>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="main-nav">
                         <ul>
                             <li><a href="about-me.html">About Me</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-page.php">Contact</a></li>
                         </ul>
                     </div>
                 </section>
@@ -75,18 +75,18 @@
                     </div>
                     <section class="col-md-9">
                         <div class="page1-header">
-                            <h1>Audio-Technica M50x</h1>
+                            <h1>K70 Mk.2 Rapidfire</h1>
                         </div>
                     </section>
                 </div>
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/M50x-1.jpg" width="1500" height="792" alt="computer-monitors">
+                        <img class="image-header-left img-fluid" src="images/corsair-k70-1.jpg" width="1500" height="792" alt="k70-keyboard">
                     </section>
                     <div class="green-text-bckg">
                         <section class="col-md-6">
                             <h2>Quick take:</h2>
-                            <p>Great headphones! If you have the money and a external microphone. Would highly recommend the Audio Technica M50x's. </p>
+                            <p>A flagship product from Corsair. If you are looking for a large keyboard with a tenkey that will last forever. This just my be the one. </p>
                         </section>
                     </div>
                 </div>
@@ -95,40 +95,35 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>The K70 Mk.2 by Corsair</b></h3>
+                            <p>The Corsair K70 Mk.2 was my favorite keyboard for the longest time. The cool design mixed with the Cherry mx silver switches. Made it a very delightful typing experience. Corsair is most famous for making a wide range of pc peripheral and hardware. They are a great company, they offer a wide range of products in several different price points. </p>
                         </div>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Cons</b></h3>
-                            <p style="clear: both">The M50x’s does have some cons to it, but most of them are personal preference. To start, it’s a closed back design. Closed back, if you don’t know, just means it’s ear cuffs are designed to cancel out noise. Which is not a bad thing by no means. The problem I have with closed back headphones, is that they in general don’t let your ears breath. So, this means over long sessions of wearing them, your ears may begin to sweat and get hot. I’ve only had this issue sometimes when going for long sessions. But to relieve it, I just slide the ear part off my ear about halfway, so I can still hear the audio and let my ear breath for a bit.</p>
+                            <p style="clear: both">To start I want so to say that I thought this was going to be my forever keyboard. The one to rule them all. This ended up changing based on two key factors. One was the size. I was used to a tenkey less keyboard forever. So going from a TKL to a full size made my desk feel very small and cramped. The second factor was the design. It’s a very aesthetically pleasing design. With all the lips and edges, it gathered dust, hair, crumbs very easily. </p>
                         </div>
                     </section>
                     <section class="col-md-5">
                         <div class="review-text">
-                            <p>Another con one may have is that, if you intend on using the M50x’s to play games. It doesn’t have a built-in microphone. So, you’ll have to go out and buy one. This wasn’t an issue for me since most gaming headsets have really bad quality microphones. For my microphone I went with a ModMic wireless, which can be attached to any pair of headphones on the market via a 3m adhesive.</p>
+                            <p>Making the cool design very unpleasant to look at, and it was a hassle to clean. Another thing that I disliked was the non-detachable cable. It’s very thick and annoying to move around because its wont bend. The large cable is due to the fact is draws a lot of power compared to other keyboards. It also has a usb pass threw on it. So, you’ll need two usb slots to power it.</p>
                             <div class="review-text-seperate">
-                            <h3><b>Pros</b></h3>
-                            <p>The pros for the M50x goes on for days. First off, I’m going to start with what it comes with. It comes with three cables. One is a small short 3.5mm jack for your phones and small devices. The second is just like the first but longer. Then finally, is a coiled cable that is very long. It also has an amp jack on it that can be attached or removed depending if you have a amp or not. One of the unique things about these headphones is that they actually fold up and come with a caring case, this makes transport very easy. </p>
-                            <p>Another pro is that, they use quality leather and cushion in the earpieces and headband. My head never really gets tired of wearing these things, besides when my ears get warm. The biggest pro that these have going for it is the sound quality.
-                            </p>
-                                </div>
+                                <h3><b>Pros</b></h3>
+                                <p>My favorite thing about the keyboard was the switches. The Cherry mx silvers mixed with the aluminum body. Produced a very pleasing typing experience. Another thing corsair has come to master is RGB. The lighting on the keyboards is very nice. Mix it with their iCue software. </p>
+                                <p>You can do many things with the lighting. Including effects on click and even play little games on the keyboard such as snake. The final pro is that the body is made of metal. So, it is very heavy and won’t move on the heaviest of typers.
+                                </p>
+                                <h3><b>Conclusion</b></h3>
+                                <p>My conclusion is that the k70 is a fantastic keyboard. If you have the space and/or need a tenkey on your keyboard.</p>
+                            </div>
                         </div>
                     </section>
                     <section class="col-md-6">
-                        <img class="review-image img-fluid" src="images/M50x-2.jpg" alt="M50x-headphones-box">
+                        <img class="review-image img-fluid" src="images/corsair-k70-2.jpg" alt="K70-keyboard-with-box">
                     </section>
                     <section class="col-md-12">
-                    <p> I have never had a pair of headphones sound so good. Lows are really good with these. So, footsteps in games that those are important are very easily heard. These have bass, but not too much where it becomes overpowering. I’ve only had mine for about four months now, and from other reviews, I’ve only heard they sound even better the longer you use them! </p>
-                    </section>
-                    <section class="col-md-12">
-                        <div class="review-text">
-                            <h3><b>Conclusion</b></h3>
-                            <p>Overall if you are looking for a pair of headphones, or a headset. I would go with the Audio Technica M50x’s and a standalone microphone 100 times over again. At $150 its really hard to beat. When I was buying mine it was between the M50x and the Sennheiser HD 6XX. The 6XX come in at $220. The only main differences between the two is that the 6XX are more open back design, which I prefer, and the 6XX draw more power.</p>
-                            <div class="review-text-bottem">
-                            <p>I really liked the open back design but didn’t like that it draws more power than the M50x. Another thing that gave the M50x an upper hand was that, they are some much more versatile. The 6XX would just be use able comfortably at home at your main rig. The M50x’s on the other hand are useable anywhere you are. Whether at home, school, or on a bus ride in the city. The M50x will be there. </p>
-                            </div>
+                        <div class="review-text-bottem">
+                            <p>I would say this is a very good option. It offers a very nice typing experience and don’t think you would regret it. If you’re limited on space. Then I would go with something different. Such as the Razer Huntsman TE or any TKL keyboards.</p>
                         </div>
                     </section>
                 </div>
