--- a/fnatic-streak-review.html
+++ b/fnatic-streak-review.html
@@ -33,7 +33,7 @@
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
-                                <div class="main-nav-small"><a href="contact.html">Contact</a></div>
+                                <div class="main-nav-small"><a href="contact-page.php">Contact</a></div>
                             </li>
                         </ul>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="main-nav">
                         <ul>
                             <li><a href="about-me.html">About Me</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-page.php">Contact</a></li>
                         </ul>
                     </div>
                 </section>
@@ -75,18 +75,18 @@
                     </div>
                     <section class="col-md-9">
                         <div class="page1-header">
-                            <h1>Audio-Technica M50x</h1>
+                            <h1>Fnatic Streak Mini</h1>
                         </div>
                     </section>
                 </div>
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/M50x-1.jpg" width="1500" height="792" alt="computer-monitors">
+                        <img class="image-header-left img-fluid" src="images/fnatic-streak-1.jpg" width="1500" height="792" alt="fnatic-keyboard">
                     </section>
                     <div class="green-text-bckg">
                         <section class="col-md-6">
                             <h2>Quick take:</h2>
-                            <p>Great headphones! If you have the money and a external microphone. Would highly recommend the Audio Technica M50x's. </p>
+                            <p>The Fnatic Steak Mini is a decent keyboard. It has a good typing expierence for the first few months. But once the keycaps get worn, it's bad.  </p>
                         </section>
                     </div>
                 </div>
@@ -95,42 +95,39 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>The Streak Mini by Fnatic Gear</b></h3>
+                            <p>The esports organization Fnatic, has had its own peripherals for a while now. Recently they have been revolutionizing their lineup. They started with the keyboards. Before it was the Rush. Now they offer the Streak and Streak Mini. Both options come with your choice of Cherry mx red, brown, and blue. The one I’ll be review will be the mini with Cherry mx blues. The blues offer a heavy click once pressed all the way down. This gives to some people a very satisfying experience. </p>
                         </div>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Cons</b></h3>
-                            <p style="clear: both">The M50x’s does have some cons to it, but most of them are personal preference. To start, it’s a closed back design. Closed back, if you don’t know, just means it’s ear cuffs are designed to cancel out noise. Which is not a bad thing by no means. The problem I have with closed back headphones, is that they in general don’t let your ears breath. So, this means over long sessions of wearing them, your ears may begin to sweat and get hot. I’ve only had this issue sometimes when going for long sessions. But to relieve it, I just slide the ear part off my ear about halfway, so I can still hear the audio and let my ear breath for a bit.</p>
+                            <p style="clear: both">Let’s start with the body. It made of aluminum. But the feet on the back are plastic. I actually had one break on me a couple months after using the keyboard. It broke in half. Other than that, the body is okay. It doesn’t offer very much besides of an open-ended design. Another con is the ABS keycaps. These have been the worse I’ve owned. They got the glosses and feel oily almost. Even after cleaning with rubbing alcohol, the still feel oily.  </p>
                         </div>
                     </section>
                     <section class="col-md-5">
                         <div class="review-text">
-                            <p>Another con one may have is that, if you intend on using the M50x’s to play games. It doesn’t have a built-in microphone. So, you’ll have to go out and buy one. This wasn’t an issue for me since most gaming headsets have really bad quality microphones. For my microphone I went with a ModMic wireless, which can be attached to any pair of headphones on the market via a 3m adhesive.</p>
+                            <p>The last I have is the cable management they implemented. It was great idea. Just poorly executed. They made the usb-c cable plug into the middle of the keyboard via a cut out. This cut out is only routed one way, and very tight. So tight that it started to cut the rubber of the cable.</p>
                             <div class="review-text-seperate">
                             <h3><b>Pros</b></h3>
-                            <p>The pros for the M50x goes on for days. First off, I’m going to start with what it comes with. It comes with three cables. One is a small short 3.5mm jack for your phones and small devices. The second is just like the first but longer. Then finally, is a coiled cable that is very long. It also has an amp jack on it that can be attached or removed depending if you have a amp or not. One of the unique things about these headphones is that they actually fold up and come with a caring case, this makes transport very easy. </p>
-                            <p>Another pro is that, they use quality leather and cushion in the earpieces and headband. My head never really gets tired of wearing these things, besides when my ears get warm. The biggest pro that these have going for it is the sound quality.
+                            <p>Even with a lot going against this keyboard I still really like it. To start it offers a “gaming mode” this disables the windows key and caps lock. Those of which could tab you out of games, and mess things up. </p>
+                            <p>Next is the RGB. It is very vibrant and colorful. The software they made is also very nice because its simple and laid out very well. This keyboard was actually my first tenkey less keyboard. 
                             </p>
+                                <p>It was a very nice experience, because I’m already limited on my space. This opened my eyes to the possibilities and other options I have to take into consideration. </p>
+                                <h3><b>Conclusion</b></h3>
+                                <p>The Fnatic Streak Mini is a good keyboard. Coming in at $100 for the mini and $130 for the larger brother it’s a solid keyboard.  </p>
                                 </div>
                         </div>
                     </section>
                     <section class="col-md-6">
-                        <img class="review-image img-fluid" src="images/M50x-2.jpg" alt="M50x-headphones-box">
+                        <img class="review-image img-fluid" src="images/fnatic-streak-2.jpg" alt="fnatic-keyboard-with-box">
                     </section>
                     <section class="col-md-12">
-                    <p> I have never had a pair of headphones sound so good. Lows are really good with these. So, footsteps in games that those are important are very easily heard. These have bass, but not too much where it becomes overpowering. I’ve only had mine for about four months now, and from other reviews, I’ve only heard they sound even better the longer you use them! </p>
-                    </section>
-                    <section class="col-md-12">
-                        <div class="review-text">
-                            <h3><b>Conclusion</b></h3>
-                            <p>Overall if you are looking for a pair of headphones, or a headset. I would go with the Audio Technica M50x’s and a standalone microphone 100 times over again. At $150 its really hard to beat. When I was buying mine it was between the M50x and the Sennheiser HD 6XX. The 6XX come in at $220. The only main differences between the two is that the 6XX are more open back design, which I prefer, and the 6XX draw more power.</p>
-                            <div class="review-text-bottem">
-                            <p>I really liked the open back design but didn’t like that it draws more power than the M50x. Another thing that gave the M50x an upper hand was that, they are some much more versatile. The 6XX would just be use able comfortably at home at your main rig. The M50x’s on the other hand are useable anywhere you are. Whether at home, school, or on a bus ride in the city. The M50x will be there. </p>
-                            </div>
+                        <div class="review-text-bottem">
+                    <p> If you do get one, I would recommend changing the keycaps with some third party PBT keycaps. That would make the typing experience much better. I’m excited to see what Fnatic keeps trying to improve from model to model, because the streak is a huge upgrade from the rush. </p>
                         </div>
                     </section>
+
                 </div>
             </div>
         </div>
