--- a/razer-huntsman-te-review.html
+++ b/razer-huntsman-te-review.html
@@ -33,7 +33,7 @@
                                 <div class="main-nav-small"><a href="about-me.html">About Me</a></div>
                             </li>
                             <li>
-                                <div class="main-nav-small"><a href="contact.html">Contact</a></div>
+                                <div class="main-nav-small"><a href="contact-page.php">Contact</a></div>
                             </li>
                         </ul>
                     </div>
@@ -54,7 +54,7 @@
                     <div class="main-nav">
                         <ul>
                             <li><a href="about-me.html">About Me</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-page.php">Contact</a></li>
                         </ul>
                     </div>
                 </section>
@@ -75,18 +75,18 @@
                     </div>
                     <section class="col-md-9">
                         <div class="page1-header">
-                            <h1>Audio-Technica M50x</h1>
+                            <h1>Razer Huntsman TE</h1>
                         </div>
                     </section>
                 </div>
                 <div class="row">
                     <section class="col-md-12">
-                        <img class="image-header-left img-fluid" src="images/M50x-1.jpg" width="1500" height="792" alt="computer-monitors">
+                        <img class="image-header-left img-fluid" src="images/razer-huntsman-2.jpg" width="1500" height="792" alt="Razer-keyboard-with-box">
                     </section>
                     <div class="green-text-bckg">
                         <section class="col-md-6">
                             <h2>Quick take:</h2>
-                            <p>Great headphones! If you have the money and a external microphone. Would highly recommend the Audio Technica M50x's. </p>
+                            <p>A wonderful keyboard to type with. The keys have nice clack sound and are very quick. Plus PBT keycaps included!!! </p>
                         </section>
                     </div>
                 </div>
@@ -95,42 +95,36 @@
                 <div class="row">
                     <section class="col-md-12">
                         <div class="review-text">
-                            <h3><b>The M50x by audio-technica</b></h3>
-                            <p>These headphones are by far the best I’ve used in my life for gaming. I’ve used everything from the high-priced Astro a50s, to the most popular HyperX cloud series. None of those are even in the ballpark of the M50x. It’s safe to say that if I had to pick one headset to have for the rest of my life, I wouldn’t regret picking the M50x’s.</p>
+                            <h3><b>The Huntsman TE by Razer</b></h3>
+                            <p>The Razer Huntsman series has been Razer’s flagship, high-end keyboard line-up. Recently they came out with a tournament edition of the keyboard, which what they did was just remove the tenkey. Before this keyboard, I honestly never thought of owning any razer products that wasn’t a mousepad because of the stigma they had from their past with quality control issues. One thing I can say for sure is that this keyboard is one of the highest quality big brand keyboard. </p>
                         </div>
                     </section>
                     <section class="col-md-12">
                         <div class="review-text">
                             <h3><b>Cons</b></h3>
-                            <p style="clear: both">The M50x’s does have some cons to it, but most of them are personal preference. To start, it’s a closed back design. Closed back, if you don’t know, just means it’s ear cuffs are designed to cancel out noise. Which is not a bad thing by no means. The problem I have with closed back headphones, is that they in general don’t let your ears breath. So, this means over long sessions of wearing them, your ears may begin to sweat and get hot. I’ve only had this issue sometimes when going for long sessions. But to relieve it, I just slide the ear part off my ear about halfway, so I can still hear the audio and let my ear breath for a bit.</p>
+                            <p style="clear: both">This keyboard is very good. So, finding cons are very hard. One thing that is lacking is the RGB. Which is very funny because it’s a Razer product. Normally they are lit up more than a Christmas tree. It has all the RGB modes they have to offer just with some of the keys like the caps key, shift, enter, and backspace. The RGB doesn’t illuminate the whole key. Which isn’t a big deal to me, but I know that could bother some people. Another con of this keyboard is also a pro. When I got this keyboard, I wasn’t expecting it to be so sensitive on the keys.  </p>
                         </div>
                     </section>
                     <section class="col-md-5">
                         <div class="review-text">
-                            <p>Another con one may have is that, if you intend on using the M50x’s to play games. It doesn’t have a built-in microphone. So, you’ll have to go out and buy one. This wasn’t an issue for me since most gaming headsets have really bad quality microphones. For my microphone I went with a ModMic wireless, which can be attached to any pair of headphones on the market via a 3m adhesive.</p>
+                            <p>So, for the first couple months I was having several typing errors because I would accidently hit keys I didn’t want. But as time went on, I got use to it and really like it.</p>
                             <div class="review-text-seperate">
                             <h3><b>Pros</b></h3>
-                            <p>The pros for the M50x goes on for days. First off, I’m going to start with what it comes with. It comes with three cables. One is a small short 3.5mm jack for your phones and small devices. The second is just like the first but longer. Then finally, is a coiled cable that is very long. It also has an amp jack on it that can be attached or removed depending if you have a amp or not. One of the unique things about these headphones is that they actually fold up and come with a caring case, this makes transport very easy. </p>
-                            <p>Another pro is that, they use quality leather and cushion in the earpieces and headband. My head never really gets tired of wearing these things, besides when my ears get warm. The biggest pro that these have going for it is the sound quality.
+                            <p>I do really like this keyboard. It’s probably my favorite keyboard I’ve owned. Let’s start with what’s made of. The body is primarily plastic, and it has good strength. I don’t notice any board flex as I type. One think that was a huge pro is that this is one of the only keyboards that are made by a major peripheral company that ships with PBT keycaps.  </p>
+                            <p>PBT is much better than ABS for one simple reason. It doesn’t get the sheen on the keycaps. Resulting in better grip and feel for a lot longer. Another pro is the switches they use. It’s razer’s custom laser switches. Which are superfast and responsive.
                             </p>
+                                <div class="review-text-bottem">
+                                <h3><b>Conclusion</b></h3>
+                                <p>Overall, I personally love this keyboard. Keyboards are all about personal preference. I think its fun to type on this keyboard. Its sound and feel are like nothing I have ever used. I think I might have found my forever keyboard with the Razer Huntsman TE.</p>
+                                </div>
                                 </div>
                         </div>
                     </section>
                     <section class="col-md-6">
-                        <img class="review-image img-fluid" src="images/M50x-2.jpg" alt="M50x-headphones-box">
+                        <img class="review-image img-fluid" src="images/razer-huntsman-1.jpg" alt="razer-slogan-by-gamers-for-gamers">
                     </section>
-                    <section class="col-md-12">
-                    <p> I have never had a pair of headphones sound so good. Lows are really good with these. So, footsteps in games that those are important are very easily heard. These have bass, but not too much where it becomes overpowering. I’ve only had mine for about four months now, and from other reviews, I’ve only heard they sound even better the longer you use them! </p>
-                    </section>
-                    <section class="col-md-12">
-                        <div class="review-text">
-                            <h3><b>Conclusion</b></h3>
-                            <p>Overall if you are looking for a pair of headphones, or a headset. I would go with the Audio Technica M50x’s and a standalone microphone 100 times over again. At $150 its really hard to beat. When I was buying mine it was between the M50x and the Sennheiser HD 6XX. The 6XX come in at $220. The only main differences between the two is that the 6XX are more open back design, which I prefer, and the 6XX draw more power.</p>
-                            <div class="review-text-bottem">
-                            <p>I really liked the open back design but didn’t like that it draws more power than the M50x. Another thing that gave the M50x an upper hand was that, they are some much more versatile. The 6XX would just be use able comfortably at home at your main rig. The M50x’s on the other hand are useable anywhere you are. Whether at home, school, or on a bus ride in the city. The M50x will be there. </p>
-                            </div>
-                        </div>
-                    </section>
+                   
+                    
                 </div>
             </div>
         </div>
